HTTProute/HTTProute-for-app/HTTP-redirect-HTTPS.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: boutique-app-route
  namespace: istio-system
spec:
  hostnames:
    - "boutique.quan.click"

  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: app-alb-gateway
      namespace: default
      sectionName: http

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
