HTTProute/HTTProute-for-app/HTTProute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: boutique-app-route-https
  namespace: istio-system
spec:
  hostnames:
    - "boutique.quan.click"
  parentRefs:
  - group: gateway.networking.k8s.io
    namespace: default
    kind: Gateway
    name: app-alb-gateway
    sectionName: https
  rules:
  - matches:
      - path:
            type: PathPrefix
            value: /

    backendRefs:
    - name: istio-ingressgateway
      port: 80
